--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "jquery": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.3.5"
